--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 markers =
     positive
+    negative
     filter
-    cash
+    cache
     article_size
+    filter_input
+    negative_input
